PVW-14: Fixed bug - whitespace below footer on mobile/tablet view

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,7 @@
 html,
 body {
   overflow-x: hidden;
+  height: 100%;
 }
 
 /* H1: RegoBook60 */
